fix: header button spacing

--- a/site/src/component/AppHeader/AppHeader.scss
+++ b/site/src/component/AppHeader/AppHeader.scss
@@ -31,6 +31,7 @@
 
   .header-button {
     font-size: 12.25px;
+    letter-spacing: 0;
   }
 
   &.mobile {
@@ -50,7 +51,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    gap: 4px;
+    gap: 0px;
 
     .navbar-left {
       display: flex;
